--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<li>WEBDESIGN</li>
 	</ul>
 </div>
-<a href="https://edithdesmis-ed.000webhostapp.com/index.html#book"><img src="Images/doubleFleche.svg" id="fleche" alt="doublefleche" />	</a>
+<a href="https://edithdesmis.github.io/Book/pages/pageBook-multicanal.html"><img src="Images/doubleFleche.svg" id="fleche" alt="doublefleche" />	</a>
 
 </div>
 
