--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<li>WEBDESIGN</li>
 	</ul>
 </div>
-<a href="https://edithdesmis.github.io/Book/#book"><img src="Images/doubleFleche.svg" id="fleche" alt="doublefleche" />	</a>
+<a href="https://edithdesmis.github.io/Book/#book"><img src="Images/doubleFleche.svg" id="fleche" alt="Book" />	</a>
 
 </div>
 
@@ -199,7 +199,7 @@ affiches, PLV, mailings...
 <!----------compétences------------------>
 <div id="contcompetence">
     <div class="competence" >
-    	<div id="idee"><img src="Images/idéé+ombre.svg" alt="idée" /></div>
+    	<div id="idee"><img src="Images/idee+ombre.svg" alt="idée" /></div>
         <div class="bleufoncé">
             <h1>Créative</h1>
             <p>toujours à l’affût de l’idée,
@@ -260,8 +260,8 @@ pour un résultat sans faute</p>
         	<img src="Images/pdf.svg" alt="pdf" width="50px" /> 
 			<p>CV à télécharger</p>
         </div></a>
-        <a href="http://www.viadeo.com/profile/002ddbxd28iop5t" target="_blank"><img src="Images/viadeo.svg" alt="viadeo" width="50px" border="0" /></a>
-        <a href="https://www.linkedin.com/profile/view?id=145879671&amp;trk=nav_responsive_tab_profile" target="_blank"><img src="Images/linkedin.svg" alt="linkedin" width="50px" /></a> 
+        <a href="https://viadeo.journaldunet.com/p/edith-desmis-5356864?" target="_blank"><img src="Images/viadeo.svg" alt="viadeo" width="50px" border="0" /></a>
+        <a href="https://www.linkedin.com/in/edith-desmis-133a3140/" target="_blank"><img src="Images/linkedin.svg" alt="linkedin" width="50px" /></a> 
 	</div>
 </div>
 <!--- CHANGEMENT LOGO MENU ---->     
