--- a/pages/pageBook-divers.html
+++ b/pages/pageBook-divers.html
@@ -56,7 +56,7 @@
 <img src="../Images/images/divers/picto-ludic'nfun.jpg" alt="catalogue jouets"/></a>
 <a href="../Images/images/divers/ludic'n fun-pte enfance.jpg" data-lightbox="groupe1"></a>
 <a href="../Images/images/divers/ludic'n fun-langage.jpg" data-lightbox="groupe1"></a>
-	<a href="../Images/images/divers/ludic'n fun-motricité.jpg" data-lightbox="groupe1"></a>
+	<a href="../Images/images/divers/ludic'n fun-motricite.jpg" data-lightbox="groupe1"></a>
 
 <a href="../Images/images/divers/chrono-jouets-1.jpg" data-lightbox="groupe1" data-title="Conception et Réalisation d'un tract jouets et des illustrations + Relais en bannière et news letter">
 <img src="../Images/images/divers/picto-chrono-jouets.jpg" alt="chrono-jouets"/></a>
@@ -100,8 +100,8 @@
   <a href="../Images/images/divers/bols-Saget-Fleurs.jpg" data-lightbox="groupe1"></a>
 <a href="../Images/images/divers/bols-Saget-motifs-ronds.jpg" data-lightbox="groupe1"></a>
 	<a href="../Images/images/divers/bols-Saget-fleurs2.jpg" data-lightbox="groupe1"></a>
-<a href="../Images/images/divers/Couverts-Chrono1.jpg" data-lightbox="groupe1"></a>
-  <a href="../Images/images/divers/Couverts-Chrono2.jpg" data-lightbox="groupe1"></a>
+<a href="../Images/images/divers/Couverts-Chrono1.png" data-lightbox="groupe1"></a>
+  <a href="../Images/images/divers/Couverts-Chrono2.png" data-lightbox="groupe1"></a>
 
 
 <a href="../Images/images/divers/regilist-2010.jpg" data-lightbox="groupe1" data-title="Réalisation d'habillage d'un Stand pour un salon, sur le thème du data et de la lumière">
